clusters/home/apps/longhorn-system/longhorn/configs/longhorn-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-ingressroute
  namespace: longhorn-system
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-clusterissuer
    gethomepage.dev/href: "https://longhorn.homelab.rivetcode.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Longhorn
    gethomepage.dev/group: Kubernetes
    gethomepage.dev/icon: longhorn.png
    gethomepage.dev/app: longhorn # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/name: Longhorn
    gethomepage.dev/widget.type: "longhorn"
    gethomepage.dev/widget.url: "https://longhorn.homelab.rivetcode.com"
    gethomepage.dev/pod-selector: ""
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`longhorn.homelab.rivetcode.com`)
    kind: Rule
    services:
    - name: longhorn-frontend
      port: 80
  tls:
    secretName: longhorn-certificate-secret
